// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Snapshot Testing Show the correct custom color 1`] = `
<svg
  fill="none"
  height={24}
  width={24}
>
  <path
    clipRule="evenodd"
    d="M4.889 8l6.001-6.001L16.891 8h-.001v10h-12V8h-.001zM2.89 9.999l-1.477 1.476L0 10.063 9.477.585c.78-.78 2.046-.78 2.826 0l9.477 9.477-1.413 1.414-1.477-1.477V18a2 2 0 0 1-2 2h-12a2 2 0 0 1-2-2V9.999z"
    fill="red"
    fillRule="evenodd"
  />
</svg>
`;

exports[`With Snapshot Testing Show the correct default svg 1`] = `
<svg
  fill="none"
  height={24}
  width={24}
>
  <path
    clipRule="evenodd"
    d="M4.889 8l6.001-6.001L16.891 8h-.001v10h-12V8h-.001zM2.89 9.999l-1.477 1.476L0 10.063 9.477.585c.78-.78 2.046-.78 2.826 0l9.477 9.477-1.413 1.414-1.477-1.477V18a2 2 0 0 1-2 2h-12a2 2 0 0 1-2-2V9.999z"
    fill="#444"
    fillRule="evenodd"
  />
</svg>
`;
